# linux-api-exercises

./: .gitignore  CMakeLists.txt  README.md  build.pl
src/: cpholes.cpp  generate_file_with_holes.cpp  tee.cpp
src/4_FileIO/: generate_file_with_holes.cpp  tee.cpp
src/5_MoreFileIO/: atomic_append.cpp  reimpl.cpp  test_append.cpp
src/7_MemoryAllocation/: allocator.cpp
src/7_MemoryAllocation/src/: allocator.cpp
src/8_UsersAndGroups/: getpwnam.cpp
src/hamlib/: hamio.ixx  hampath.ixx  hamutil.ixx
